cmake_minimum_required(VERSION 2.8.3)
project(coverage_test)
add_compile_options(-std=c++11)
find_package(ompl)
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
find_package (glog 0.4.0 REQUIRED)
# find_package(Gflags)
include_directories(${GLOG_INCLUDE_DIRS})
# include_directories(${GFLAGS_INCLUDE_DIRS} ${GLOG_INCLUDE_DIRS})
include_directories(/home/wz/company/coding)
include_directories(${OMPL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
add_executable(coverage_test coverage_test.cpp)
target_link_libraries(coverage_test glog::glog ${OMPL_LIBRARIES} ${OpenCV_LIBS})
